--- a/2024/leaderboard/css/style.css
+++ b/2024/leaderboard/css/style.css
@@ -325,6 +325,14 @@ path.scoreLine{
   user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
+/* -------------------
+Predictions Map CSS
+----------------------*/
+
+.predictionsMapContainer {
+  text-align: center;
+}
+
 /*--------------------
 Analysis CSS
 --------------------*/
