--- a/2024/leaderboard/css/style.css
+++ b/2024/leaderboard/css/style.css
@@ -220,7 +220,7 @@ Leaderboard CSS
 }
 .leaderboardRow {
   border-collapse: collapse;
-  /* cursor: pointer; */
+  cursor: pointer;
 }
 .leaderboardRow:hover {
   background-color: rgb(0, 210, 210) !important;
